correzione: il commmit precedente mancava di un importante salvataggio

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,18 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+
+ @media (max-width:768px){
+  .container{
+    width:780px;
+  }
+ }
+
+
+ @media (max-width:480px){
+
+
+
+}
