--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ img {
 
  @media (max-width:768px){
   .container{
-    width:780px;
+    width: 100%
     
   }
  }
@@ -140,15 +140,14 @@ img {
 
  @media (max-width:480px){
   .container{
-    width: 480px;
+    width: 100%;
   }
 
   .container .row{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: ;
+  
   }
 
   .steps .col{
