--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ img {
   }
 }
 
+/* quello qui sotto potrei toglierlo perchè ho giù utilizzato quello sopra e da quella misura in giù fino al 480 si comporta sempre bene */
+
  @media (max-width:768px){
   .container{
     width: 100%
@@ -146,6 +148,7 @@ img {
     width: 100%;
   }
   
+  /* con flex column le sposto tutt in colonna e potrei anche evitare i posizionamenti centrali dato che più sopra nel codice c'è gia questa parte di codice */
 
   .container .row{
     flex-direction: column;
@@ -154,23 +157,37 @@ img {
   
   }
 
-  .lessons .col{
-    width: 80%;
+  /* posso raggrupparle tutte insieme: */
+  .lessons .col,
+  .steps .col,
+  .why-us .col{
+    width: 100%;
     margin: 10% 0;
+  }
+
+  .lessons .col:last-child,
+  .steps .col:last-child,
+  .why-us .col:last-child{
+    margin-bottom: 0;
+  }
+
+/* tolgo il margine sotto di steps che andava a diventare blu per la zona why */
+
+  .steps{
+    margin-bottom: 0;
+  }
+
+/* qui compenso il margine tolto sopra, do un colore totale quasi nero e tolgo il bottom che altrimenti rimaneva blu */
+
+  .why-us{
+    padding: 3rem 0;
+    background-color: #222222;
+    margin-bottom: 0;
   }
 
   .container h2{
     margin-bottom: 0;
   }
 
-  .steps .col{
-    width: 80%;
-    margin: 10% 0;
-  }
-
-  .why-us .col{
-    width: 80%;
-    margin: 10% 0 0 10%;
-    
-  }
+ 
 }
